--- a/upload/дз/form.html
+++ b/upload/дз/form.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="1.css">
+
 </head>
 
 <body>
+    <div class="one">
     <form action="fail.php" method="POST" enctype="multipart/form-data">
         <div id="btn">
             <input type="file" name="fail" id="f" style="visibility: hidden;">
@@ -18,7 +19,7 @@
 
 
 
-    </form>
+    </form></div>
 </body>
 
 </html>
