--- a/chat_regexp/oooindex.html
+++ b/chat_regexp/oooindex.html
@@ -8,7 +8,7 @@
 </head>
 
     <frameset rows='*,100' >
-      <frame src='chat1.php'>
+      <frame src='show.php'>
       <frame src='chat_form.php'>
     </frameset>
 
